force-app/main/default/objects/AI_Test_Cycle_Result__c/AI_Test_Cycle_Result__c.object-meta.xml
<CustomObject>
    <label>Test Cycle Result</label>
    <nameField>
        <displayFormat>TCR-{0000000}</displayFormat>
        <label>Result #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Cycle Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>