force-app/main/default/objects/AI_Test_Cycle_Result__c/fields/AI_Security_Audit__c.field-meta.xml
<CustomField>
    <fullName>AI_Security_Audit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Security Audit</label>
    <referenceTo>AI_Response__c</referenceTo>
    <relationshipLabel>Test Cycle Results</relationshipLabel>
    <relationshipName>Test_Cycle_Results</relationshipName>
    <type>Lookup</type>
</CustomField>