force-app/main/default/objects/AI_Test_Cycle_Result__c/fields/AI_Test_Cycle__c.field-meta.xml
<CustomField>
    <fullName>AI_Test_Cycle__c</fullName>
    <label>Test Cycle</label>
    <referenceTo>AI_Test_Cycle__c</referenceTo>
    <relationshipLabel>Test Cycle Results</relationshipLabel>
    <relationshipName>Test_Cycle_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>