force-app/main/default/objects/AI_Test_Cycle_Result__c/fields/AI_Verification_Security_Audit__c.field-meta.xml
<CustomField>
    <fullName>AI_Verification_Security_Audit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Verification Security Audit</label>
    <referenceTo>AI_Response__c</referenceTo>
    <relationshipLabel>Test Cycle Results (Verification Security Audit)</relationshipLabel>
    <relationshipName>Test_Cycle_Results1</relationshipName>
    <type>Lookup</type>
</CustomField>