force-app/main/default/objects/AI_Test_Cycle_Result__c/fields/Input__c.field-meta.xml
<CustomField>
    <fullName>Input__c</fullName>
    <label>Input</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>